<resources>
    <string name="app_name">Log</string>
    <string name="logfilter_lable">Enter Log Filter:</string>
    <string name="logfilter_button">OK</string>
    <string name="priority_verbose">Verbose (show all)</string>
    <string name="priority_debug">Debug</string>
    <string name="priority_info">Info</string>
    <string name="priority_warning">Warning</string>
    <string name="priority_error">Error</string>
</resources>